--- a/src/css/estilo.css
+++ b/src/css/estilo.css
@@ -2,137 +2,208 @@
     --text-color1:#000;
     --text-color2:#fff;
     --main-color:yellow;
-    --bg-color:#000137;
+    --bg-color: #000137;
     --second-color:#EFFD5F;
-}
+ }
+ *{
+     margin:0;
+     padding:0;
+     box-sizing: border-box;
+     text-decoration: none;
+     list-style: none;
+ }
+ 
+ body{
+     background: var(--bg-color);
+ }
+ header{
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    list-style: none;
-}
-
-body{
-    background: var(--bg-color);
-}
-
-header{
-    position: fixed;
-    width: 100%;
-    padding: 40px 60px;
-}
-
-nav{
+     width: 100%;
+     padding: 40px 60px;
+ }
+ nav{
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
+ nav ul{
+     display: flex;
+     align-items: center;
+     gap:50px;
+ }
+ nav ul li a{
+     color:var(--text-color2);
+     font-size: 1rem;
+     transition:  all 0.1s ease;
+     text-transform: uppercase;
+ }
+ nav ul li a:hover{
+     border-bottom: 3px solid var(--second-color);
+ }
+ .logo{
+     font-size: 2rem;
+     font-weight: 800;
+     color:var(--text-color2);
+ }
+ 
+ .main{
+     width: 100%;
+ }
+ 
+ .home{
+     padding:1rem;
+     display: flex;
+     align-items: center;
+     justify-content: space-between;
+ }
+ section{
+     width: 100%;
+     height: 100vh;
+ }
+ .left{
+     display: flex;
+     flex-direction: column;
+     justify-items: center;
+ }
+ .left p{
+     font-size: 2rem;
+     font-weight: 900;
+     color:var(--second-color);
+     margin-bottom: 10px;
+ }
+ 
+ .left h4{
+     font-size: 1.2rem;
+     color:var(--text-color2);
+     margin-bottom: 3rem;
+ }
+ .btn{
+     padding: 1rem 5rem;
+     background-color: var(--second-color);
+     border-radius: 30px;
+     color: var(--bg-color);
+     font-size: 1rem;
+     text-transform: uppercase;
+     font-weight: 800;
+     transition: all 0.3s ease;
+ }
+ 
+ .btn:hover{
+     box-shadow: 0 5px 10px var(--text-color2);
+ }
+ .right img{
+     width: 400px;
+     border-radius: 50%;
+     margin-bottom: 1rem;
+     animation: efeito 1.8s infinite alternate;
+ }
+ .shadow{
+     width: 400px;
+     height: 45px;
+     border-radius: 50%;
+     background: var(--second-color);
+     margin: 0 auto;
+     filter:blur(5px);
+     animation: efeito2 1.8s infinite alternate;
+ }
+ @keyframes efeito{
+     0%{
+         transform:translateY(0);
+     }
+     100%{
+         transform: translateY(15px);
+     }
+ }
+ @keyframes efeito2 {
+ 
+     0%{
+         transform: scale(1.1);
+     }
+     100%{
+         transform: scale(.85,.85);
+ 
+     }
+ }
+ /*Medidor de estatistica automático*/
+ 
+ #sobre{
+     margin-top: 100px;
+     display: flex;
+     justify-content: center;
+ }
+ .medicao{
+     margin-top: 100px;
+     display: flex;
+     justify-content: space-around;
+     margin: 0 6rem 6rem 3rem;
+     padding: 2rem;
+     gap:2rem;
+ }
+ 
+ .medicao-item{
+     width: 25%;
+ }
+ .medicao-item span{
+     font-size: 3rem;
+     color:var(--second-color);
+ }
+ .medicao-item h3{
+     font-size: 1.2rem;
+     font-weight: 600;
+     color:var(--text-color2);
+     margin-top: 1rem;
+ }
+ .medicao-item p{
+     color:var(--second-color);
+     line-height: 1.5rem;
+     margin-top: 1rem;
+ }
+ 
+ /*contato*/
+ 
+ #contato{
+     margin-top: 100px;
+     color:var(--text-color2);
+     display: flex;
+     flex-direction: column;
+     justify-content: center;
+     align-items: center;
+     padding: 1rem;
+ }
+ .info-titulo{
+     margin-bottom: 50px;
+     text-transform: uppercase;
+     font-size: 2rem;
+ }
+ 
+ .info-titulo,
+ .info-texto{
+ 
+     background-image: linear-gradient(to right, yellow, aqua);
+     background-clip: text;
+     -webkit-background-clip: text;
+     -webkit-text-fill-color: transparent;
+ 
+ }
+ #email{
+     width: 350px;
+     height: 40px;
+     padding: 1rem;
+     border:2px solid var(--second-color);
+     border-radius: 10px;
+ }
+ .info-email::placeholder{
+     color:var(--bg-color);
+     padding: 0.1em;
+     padding-left: 30px;
+     background:url("../assets/email.svg") no-repeat;
+ }
+ .mensagem.hidden{
+     display: none;
+ }
+ 
+ h5{
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-nav ul{
-    display: flex;
-    align-items: center;
-    gap: 50px;
-}
-
-nav ul li a{
-   color: var(--text-color2);
-   font-size: 1rem;
-   transition: all 0.1s ease;
-   text-transform: uppercase;
-
-}
-
-nav ul li a:hover{
-    border-bottom: 3px solid var(--second-color);
-}
-
-.logo{
-    font-size: 2rem;
-    font-weight: 800;
-    color: var(--text-color2);
-}
-
-.main{
-    width: 100%;
-}
-
-.home{
-    padding: 1rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-section{
-    width: 100%;
-    height: 100vh;
-}
-
-.left{
-    float: left;
-    flex-direction: column;
     color: var(--second-color);
-}
-
-.left p{
-    font-size: 2rem;
-    font-weight: 900;
-    color: #EFFD5F;
-    margin-bottom: 10px;
-}
-
-.left h4{
-    font-size: 1.2rem;
-    color: var(--text-color2);
-    margin-bottom: 3rem;
-}
-
-.btn{
-    padding: 1rem 5rem;
-    background-color: var(--second-color);
-    border-radius: 30px;
-    color: var(--bg-color);
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 800;
-    transition: all 0.3s ease;
-}
-
-.btn:hover{
-    box-shadow: 0 5px 10px var(--text-color2);
-}
-
-.right img{
-    width: 400px;
-    border-radius: 50%;
-    margin-bottom: 1rem;
-    animation: efeito 1.8s infinite alternate;
-}
-
-.shadow{
-    width: 400px;
-    height: 45px;
-    border-radius: 50%;
-    background: var(--second-color);
-    margin: 0 auto;
-    filter: blur(5px);
-    animation: efeito2 1.8s infinite alternate;
-}
-
-@keyframes efeito{
-    0%{
-        transform:translateY(0);
-    }
-    100%{
-        transform: translateY(15px);
-    }
-}
-@keyframes efeito2{
-    0%{
-        transform: scale(1.1);
-    }
-    100%{
-        transform: scale(.80,.80);
-    }
-}
+    justify-content: center;
+ }
